kubernetes/demoboard/demoboard-light.yaml
# Demoboard - light mode (API SQLite + frontend only)
---
apiVersion: v1
kind: Namespace
metadata:
  name: demoboard-light
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: demoboard-api-sqlite
#   namespace: demoboard-light
# spec:
#   accessModes: ["ReadWriteOnce"]
#   resources:
#     requests:
#       storage: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoboard-api
  namespace: demoboard-light
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoboard-api
  template:
    metadata:
      labels:
        app: demoboard-api
    spec:
      containers:
        - name: api
          image: localhost:32000/api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: demoboard-light
spec:
  selector:
    app: demoboard-api
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoboard-frontend
  namespace: demoboard-light
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoboard-frontend
  template:
    metadata:
      labels:
        app: demoboard-frontend
    spec:
      containers:
        - name: frontend
          image: localhost:32000/front:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: demoboard-light
spec:
  selector:
    app: demoboard-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoboard-light
  namespace: demoboard-light
spec:
  rules:
    - host: vm00.tpcsonline.org
      http:
        paths:
          # - path: /api
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: api-service
          #       port:
          #         number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
